# ucm-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  railway.toml  sample-output.md  submission.md
.github/workflows/: ci.yml  claude-code-review.yml
case-study/marimo/: CASE_STUDY.md  analyze_graph.py  contribution_analysis.py  ground-truth.json  run.sh  validate.py
case-study/marimo/results/: .gitignore  contribution-analysis.txt  scan-output.txt
crates/context-api/: Cargo.toml
crates/context-api/src/: main.rs
crates/context-core/: Cargo.toml
crates/context-core/src/: edge.rs  entity.rs  error.rs  event.rs  graph.rs  lib.rs
crates/context-events/: Cargo.toml
crates/context-events/src/: lib.rs  projection.rs  store.rs
crates/context-ingest/: Cargo.toml
crates/context-ingest/src/: api_log_adapter.rs  code_parser.rs  diff_parser.rs  git_history_adapter.rs  jira_adapter.rs  lib.rs
crates/context-observe/: Cargo.toml
crates/context-observe/src/: replay.rs  trace.rs
crates/context-reason/: Cargo.toml
crates/context-reason/src/: ambiguity.rs  explanation.rs  impact.rs  intent.rs
crates/ucm-api/: Cargo.toml
crates/ucm-api/src/: main.rs
crates/ucm-cli/: Cargo.toml
crates/ucm-cli/src/: main.rs
crates/ucm-core/: Cargo.toml
crates/ucm-core/src/: confidence.rs  edge.rs  entity.rs  error.rs  event.rs  graph.rs  lib.rs
crates/ucm-events/: Cargo.toml
crates/ucm-events/src/: lib.rs  projection.rs  store.rs
crates/ucm-ingest/: Cargo.toml
crates/ucm-ingest/src/: api_log_adapter.rs  code_parser.rs  diff_parser.rs  git_history_adapter.rs  jira_adapter.rs  lib.rs  linear_adapter.rs
crates/ucm-observe/: Cargo.toml
crates/ucm-observe/src/: lib.rs  replay.rs  trace.rs
crates/ucm-reason/: Cargo.toml
crates/ucm-reason/src/: ambiguity.rs  explanation.rs  impact.rs  intent.rs  lib.rs
dashboard/: .env.production  index.html  package.json  pnpm-lock.yaml
dashboard/src/: App.tsx
dashboard/src/components/: architecture-flow.tsx  architecture-view.tsx  data-flow-view.tsx  demo-view.tsx  impact-simulator.tsx  integrations-view.tsx
dashboard/src/lib/: api.ts
docs/: _config.yml  index.md
tasks/: todo.md
