[workspace]
resolver = "2"
members = [
    "crates/ucm-core",
    "crates/ucm-ingest",
    "crates/ucm-events",
    "crates/ucm-reason",
    "crates/ucm-observe",
    "crates/ucm-api",
    "crates/ucm-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["UCM Contributors"]
license = "MIT"

[workspace.dependencies]
# Graph
petgraph = { version = "0.7", features = ["serde-1"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs and time
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Internal crates
ucm-core = { path = "crates/ucm-core" }
ucm-ingest = { path = "crates/ucm-ingest" }
ucm-events = { path = "crates/ucm-events" }
ucm-reason = { path = "crates/ucm-reason" }
ucm-observe = { path = "crates/ucm-observe" }
ucm-api = { path = "crates/ucm-api" }
