[workspace]
resolver = "2"
members = [
    "crates/ucm-core",  # dir name stays; package name = ucm-graph-core
    "crates/ucm-ingest",
    "crates/ucm-events",
    "crates/ucm-reason",
    "crates/ucm-observe",
    "crates/ucm-api",
    "crates/ucm-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["UCM Contributors"]
license = "MIT"
repository = "https://github.com/paritoshk/contextqa-test"
homepage = "https://github.com/paritoshk/contextqa-test"
documentation = "https://docs.rs/ucm-graph-core"
keywords = ["impact-analysis", "dependency-graph", "static-analysis", "bayesian"]
categories = ["development-tools", "algorithms"]
readme = "README.md"

[workspace.dependencies]
# Graph
petgraph = { version = "0.7", features = ["serde-1"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs and time
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Internal crates
ucm-graph-core = { path = "crates/ucm-core", version = "0.1.2" }
ucm-ingest = { path = "crates/ucm-ingest", version = "0.1.2" }
ucm-events = { path = "crates/ucm-events", version = "0.1.2" }
ucm-reason = { path = "crates/ucm-reason", version = "0.1.2" }
ucm-observe = { path = "crates/ucm-observe", version = "0.1.2" }
ucm-api = { path = "crates/ucm-api", version = "0.1.2" }
