[package]
name = "context-api"
version.workspace = true
edition.workspace = true

[dependencies]
context-core = { workspace = true }
context-events = { workspace = true }
context-ingest = { workspace = true }
context-reason = { workspace = true }
context-observe = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
