[package]
name = "ucm-ingest"
version.workspace = true
edition.workspace = true
description = "Data ingestion adapters for UCM (Git, Jira, Linear, code parsing)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
ucm-graph-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ucm-events = { workspace = true }
