[package]
name = "ucm-observe"
version.workspace = true
edition.workspace = true
description = "Observability and tracing hooks for UCM event streams"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
ucm-graph-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
